added notif and paginator

--- a/public/index.html
+++ b/public/index.html
@@ -15,20 +15,19 @@
 
       <title>React App</title>
 
-      <title>Pusher Test</title>
       <script src="https://js.pusher.com/7.2/pusher.min.js"></script>
-      <script>
+      <!-- <script>
             Pusher.logToConsole = true;
     
         var pusher = new Pusher('952cfcc3e466664b7632', {
           cluster: 'ap2'
         });
     
-        var channel = pusher.subscribe('my-channel');
+        var channel = pusher.subscribe('my-channel-');
         channel.bind('my-event', function(data) {
           alert(JSON.stringify(data));
         });
-      </script>
+      </script> --> 
     </head>
   <body>
     <!DOCTYPE html>
